wrote some code, but no stars showing up.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>CS 233 JS MidnightSky - Canvas Example</title>
 </head>
 <body>
-    <canvas>
-
-    </canvas>
+    <div class="canvas-area">
+        <canvas id="imgCanvas" class="img-canvas">
+          Canvas Not supported in your browser... Sorry!
+        </canvas>
+      </div>
     <script src="./dist/midnightsky.js"></script>
 </body>
 </html>
