--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="styles.css">
+    <!-- ./src/css/styles.css -->
+    <link rel="stylesheet" href="./dist/styles.css">
     <title>CS 233 JS MidnightSky - Canvas Example</title>
 </head>
 <body>
@@ -12,6 +13,8 @@
           Canvas Not supported in your browser... Sorry!
         </canvas>
       </div>
+    
+    <!-- "./src/js/midnightsky.js" -->
     <script src="./dist/midnightsky.js"></script>
 </body>
 </html>
